feat: Enhance event and reservation management
Improved backend logic for event allowances and reservations, including new repository methods and refined service handling. Updated unit tests to cover new scenarios.